load("//bazel:skia_app_container.bzl", "skia_app_container")

filegroup(
    name = "docs",
    srcs = glob(["docs/**"]),
)

skia_app_container(
    name = "api_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//api/go/api:api",
                "0755",
            ],
        ],
        "/usr/local/share/api/docs": [
            [
                ":docs",
                "0755",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/api",
    repository = "skia-public/api",
)
