load("//bazel:skia_app_container.bzl", "skia_app_container")

skia_app_container(
    name = "autoroll_google3_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//autoroll/go/autoroll-google3:autoroll-google3",
                "0755",
            ],
        ],
    },
    repository = "skia-public/autoroll-google3",
    run_commands_root = [
        "mkdir -p -m 777 /mnt/pd0/autoroll_workdir",
    ],
)

skia_app_container(
    name = "autoroll_be_container",
    base_image = "@base-cipd//image",
    dirs = {
        "/usr/local/bin": [
            [
                "//autoroll/go/autoroll-be:autoroll-be",
                "0755",
            ],
        ],
        "/usr/local/share/autoroll": [
            [
                "//infra/config:recipes.cfg",
                "0644",
            ],
        ],
    },
    env = {
        "PATH": "/cipd/go/bin:$${PATH}",
    },
    repository = "skia-public/autoroll-be",
    run_commands_root = [
        "apt-get update",
        "apt-get install -y wget openssh-client curl procps unzip vim less build-essential g++ g++-10 gcc gcc-10 gcc-10-base cpp cpp-10 libgcc-10-dev libstdc++-10-dev cmake",
        "wget --output-document=/usr/local/bin/bazelisk https://github.com/bazelbuild/bazelisk/releases/download/v1.14.0/bazelisk-linux-amd64",
        "chmod a+x /usr/local/bin/bazelisk",
        "cipd install skia/bots/go --root=/cipd",
    ],
)

skia_app_container(
    name = "autoroll_fe_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//autoroll/go/autoroll-fe:autoroll-fe",
                "0755",
            ],
        ],
        "/usr/local/share/autoroll-fe/dist/img": [
            [
                "//autoroll/images:%s" % favicon,
                "0644",
            ]
            for favicon in [
                "favicon-failure.svg",
                "favicon-stopped.svg",
                "favicon-success.svg",
                "favicon-unknown.svg",
            ]
        ],
        "/usr/local/share/autoroll-fe/dist": [
            [
                "//autoroll/pages:production/%s.%s" % (page, ext),
                "0644",
            ]
            for page in [
                "index",
                "config",
                "roller",
                "mode-history",
                "strategy-history",
            ]
            for ext in [
                "css",
                "html",
                "js",
            ]
        ],
    },
    repository = "skia-public/autoroll-fe",
)

skia_app_container(
    name = "autoroll_config_converter_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//autoroll/go/autoroll-config-converter:autoroll-config-converter",
                "0755",
            ],
        ],
    },
    repository = "skia-public/autoroll-config-converter",
)
